crates/locus-core/tests/common/snapshots/regression_render_tag__common__hub__hub_locus_v1_tag36h11_1280x720_edlines_gwlf.snap
---
source: crates/locus-core/tests/common/hub.rs
expression: report
---
summary:
  dataset_size: 50
  mean_recall: 0.9
  mean_precision: 1
  mean_rmse: 0.5634
  mean_reprojection_rmse: 0.5638
  p50_translation_error: 0.0021
  p90_translation_error: 0.0188
  p99_translation_error: 0.0451
  p50_rotation_error: 0.0636
  p90_rotation_error: 0.1729
  p99_rotation_error: 0.3397
  mean_hamming: 0
  mean_total_ms: "[DURATION]"
  worst_offenders:
    - filename: scene_0002_cam_0000.png
      missed: 1
      extra: 0
      rmse: 0
    - filename: scene_0008_cam_0000.png
      missed: 1
      extra: 0
      rmse: 0
    - filename: scene_0012_cam_0000.png
      missed: 1
      extra: 0
      rmse: 0
    - filename: scene_0017_cam_0000.png
      missed: 1
      extra: 0
      rmse: 0
    - filename: scene_0033_cam_0000.png
      missed: 1
      extra: 0
      rmse: 0
