crates/locus-core/tests/common/snapshots/regression_render_tag__common__hub__hub_locus_v1_tag36h11_1280x720_max_recall_adaptive.snap
---
source: crates/locus-core/tests/common/hub.rs
assertion_line: 480
expression: report
---
summary:
  dataset_size: 50
  mean_recall: 0.9
  mean_precision: 1
  mean_rmse: 0.5617
  mean_reprojection_rmse: 0.5581
  p50_translation_error: 0.0021
  p90_translation_error: 0.0152
  p99_translation_error: 0.0448
  p50_rotation_error: 0.094
  p90_rotation_error: 0.3109
  p99_rotation_error: 1.0174
  mean_hamming: 0
  mean_total_ms: "[DURATION]"
  worst_offenders:
    - filename: scene_0002_cam_0000.png
      missed: 1
      extra: 0
      rmse: 0
    - filename: scene_0008_cam_0000.png
      missed: 1
      extra: 0
      rmse: 0
    - filename: scene_0012_cam_0000.png
      missed: 1
      extra: 0
      rmse: 0
    - filename: scene_0017_cam_0000.png
      missed: 1
      extra: 0
      rmse: 0
    - filename: scene_0033_cam_0000.png
      missed: 1
      extra: 0
      rmse: 0
