crates/locus-core/tests/common/snapshots/regression_render_tag__common__hub__hub_locus_v1_tag36h11_1280x720_render_tag_hub.snap
---
source: crates/locus-core/tests/common/hub.rs
expression: report
---
summary:
  dataset_size: 50
  mean_recall: 1
  mean_precision: 1
  mean_rmse: 0.2079
  mean_reprojection_rmse: 0.1883
  p50_translation_error: 0.0004
  p90_translation_error: 0.0041
  p99_translation_error: 0.0184
  p50_rotation_error: 0.0644
  p90_rotation_error: 0.3662
  p99_rotation_error: 0.865
  mean_hamming: 0
  mean_total_ms: "[DURATION]"
  worst_offenders: []
