crates/locus-core/tests/common/snapshots/regression_render_tag__common__hub__hub_locus_v1_tag36h11_1920x1080.snap
---
source: crates/locus-core/tests/common/hub.rs
assertion_line: 474
expression: report
---
summary:
  dataset_size: 50
  mean_recall: 1
  mean_precision: 1
  mean_rmse: 0.0648
  mean_reprojection_rmse: 0.0768
  p50_translation_error: 0.0002
  p90_translation_error: 0.0011
  p99_translation_error: 0.0188
  p50_rotation_error: 0.043
  p90_rotation_error: 0.0985
  p99_rotation_error: 0.2895
  mean_hamming: 0
  mean_total_ms: "[DURATION]"
  worst_offenders: []
