crates/locus-core/tests/common/snapshots/regression_render_tag__common__hub__hub_locus_v1_tag36h11_1920x1080_max_recall_adaptive.snap
---
source: crates/locus-core/tests/common/hub.rs
assertion_line: 480
expression: report
---
summary:
  dataset_size: 50
  mean_recall: 0.96
  mean_precision: 1
  mean_rmse: 0.5878
  mean_reprojection_rmse: 0.5794
  p50_translation_error: 0.0029
  p90_translation_error: 0.0232
  p99_translation_error: 0.056
  p50_rotation_error: 0.0797
  p90_rotation_error: 0.3329
  p99_rotation_error: 1.0087
  mean_hamming: 0
  mean_total_ms: "[DURATION]"
  worst_offenders:
    - filename: scene_0002_cam_0000.png
      missed: 1
      extra: 0
      rmse: 0
    - filename: scene_0033_cam_0000.png
      missed: 1
      extra: 0
      rmse: 0
